# IT206_PROJECT_3

./: CheatSheet.md  EXplanation.md  MultiCardGame.md  Presentation.md  README.md  TeenPatti.cpp  cards.cpp  main.cpp  test.cpp
BlackJack/: blackjack.cpp  deck.cpp  game.cpp
Blackjack_CPP/: Makefile  README.md  meson.build
Blackjack_CPP/src/: statistics.cpp
Blackjack_CPP/src/headers/: deck.hpp
MultiCardGame/include/: Blackjack.h  Card.h  Dealer.h  Deck.h  Home.h  Player.h  Poker.h  TeenPatti.h
MultiCardGame/src/: Blackjack.cpp  Card.cpp  Dealer.cpp  Deck.cpp  Home.cpp  Player.cpp  Poker.cpp  TeenPatti.cpp  main.cpp
SFML/: trial.cpp
TeenPatti/: Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
TeenPattiGame/: CMakeLists.txt  README.md
TeenPattiGame/include/: cards.h  game.h
TeenPattiGame/src/: cards.cpp  cards.h  game.cpp  game.h  main.cpp  utils.cpp
TeenPattiGame/tests/: game_test.cpp
